--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ main {
             font-style: italic;
         }
 
+
     }
 
     .poster {
@@ -60,4 +61,8 @@ main {
         }
 
     }
+}
+
+::-webkit-scrollbar {
+    width: 0px;
 }
